# flyer-rs

./: .gitignore  Cargo.toml  build.rs  nohup.out
_old/aircraft/: aircraft.rs  propulsion.rs
_old/runway/: mod.rs
_old/terrain/: config.rs  mod.rs
_old/trim/: trim.rs
_old/utils/: aircraft_errors.rs  mod.rs
_old/world/: camera.rs  mod.rs  world.rs
data/: TO.yaml  f4.yaml  gtm.yaml
examples/: 1-explore_terrain.rs  10-c172-physics-test.rs  10-rollout_example.rs  1a-explore_runways.rs  2-dubins_speed.rs  3-full_speed.rs  4-dubins_nav.rs  4f-full_nav.rs  5-terrain_speed.rs  6-rollout.rs  6-trim.rs  6e-trim.rs  6g-trim.rs  6s-simple-trim.rs  6v-simplified-trim-70ms.rs  6x-simple-trim.rs  6x-trim.rs  6z-trim-and-roll.rs  7-multi_dubins_speed.rs  8-multi_full_speed.rs  9-linearize.rs  9-root_locus.rs  9h-linearize.rs  ac_render.rs  agent_update.rs  dubins_aircraft.rs  first_loop.rs  headless_run.rs  nannou_test.rs  original.rs  pso.rs  render_terrain.rs  sdl2_test.rs  simulate.rs  skia_test.rs  sprite_render.rs  step_loop.rs  step_loop_custom.rs  terrain_explore.rs  terrain_render.rs  (+2 more)
src/: aircraft.rs  lib.rs  main.rs  runway.rs  terrain.rs  terrain_to_render.sh  trim.rs  utils.rs  world.rs
src/aircraft/: aerodynamics.rs  mod.rs
src/components/: aerodynamics.rs  camera.rs  collision.rs  controller.rs  mod.rs  physics.rs  propulsion.rs  render.rs  runway.rs  spatial.rs  termination.rs  terrain.rs
src/components/aircraft/: air_data.rs  dubins.rs  full.rs  mod.rs  model.rs  propulsion.rs  render.rs  state.rs
src/components/tasks/: base.rs  control.rs  goal.rs  landing.rs  mod.rs  runway.rs  termination.rs  trajectory.rs
src/components/terrain/: chunk.rs  feature.rs  mod.rs  tile.rs
src/components/trim/: config.rs  event.rs  mod.rs  solver.rs  state.rs
src/config/: aerodynamics.rs  mod.rs
src/ecs/: error.rs  mod.rs  world.rs
src/ecs/component/: manager.rs  mod.rs  registry.rs  storage.rs
src/ecs/entity/: id.rs  manager.rs  mod.rs
src/ecs/query/: mod.rs  query.rs
src/ecs/resource/: manager.rs  mod.rs
src/ecs/system/: access.rs  manager.rs  mod.rs  scheduler.rs
src/environment/: mod.rs
src/environment/runway/: config.rs  mod.rs  runway.rs
src/environment/terrain/: config.rs  generator.rs  mod.rs  tile.rs  utils.rs
src/example_loops/: example_graphic_loop.rs  init_flyer_loop.rs
src/physics/: error.rs  mod.rs  traits.rs
src/physics/aerso/: adapter.rs  config.rs  mod.rs
src/physics/components/: forces.rs  mod.rs  motion.rs
src/physics/models/: mod.rs
src/plugins/: aerodynamics.rs  agent.rs  aircraft.rs  camera.rs  dubins_aircraft.rs  environment.rs  events.rs  full_aircraft.rs  headless.rs  mod.rs  physics.rs  render.rs  runway.rs  staging.rs  startup_systems.rs  terrain.rs  transformation.rs  trim.rs
src/rendering/: error.rs  mod.rs  renderer.rs  terrain_renderer.rs  types.rs  vehicle_renderer.rs
src/resources/: environment.rs  errors.rs  mod.rs  system.rs  time.rs
src/resources/aerodynamics/: config.rs  mod.rs
src/resources/agent/: config.rs  mod.rs  state.rs  update_control.rs
src/resources/aircraft/: assets.rs  mod.rs
src/resources/assets/: loader.rs  manager.rs  mod.rs
src/resources/config/: asset.rs  environment.rs  mod.rs  physics.rs  render.rs  simulation.rs
src/resources/environment/: environment.rs  mod.rs
src/resources/physics/: config.rs  mod.rs
src/resources/render/: config.rs  mod.rs
src/resources/rewards/: mod.rs
src/resources/terrain/: assets.rs  mod.rs  state.rs
src/resources/transformations/: frames.rs  mod.rs  traits.rs
src/runway/: runway.rs
src/server/: act.rs  mod.rs  obs.rs  startup.rs  structures.rs
src/server/config/: errors.rs  mod.rs
src/state/: error.rs  mod.rs  physics.rs  spatial.rs  traits.rs
src/systems/: mod.rs
src/systems/aerodynamics/: mod.rs  (+3 more)
src/terrain/: terrain.rs
src/trim/: mod.rs
src/utils/: constants.rs  errors.rs  math.rs  mod.rs  rng.rs  types.rs
src/vehicles/: mod.rs  traits.rs
src/world/: asset_management.rs  camera.rs  mod.rs  rendering.rs  settings.rs  state.rs  terrain_management.rs  traits.rs  world_core.rs
tests/common/: assertions.rs  helpers.rs  mod.rs  test_app.rs
tests/integration/: mod.rs
(+104 files in other folders)
