[package]
name = "flyer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "flyer"

# [dependencies.sdl2]
#     version = "0.35"
#     default-features = false
#     features = ["ttf","image","gfx","mixer"]

[dependencies]
# minifb = "0.25"
noise = "0.8.0"
image = "0.24.7"
glam = {version="0.24.2", features = ["mint"]}
rand = "0.8.5"
rand_seeder = "0.2.3"
rand_chacha = "0.3.1"
aerso = { git = "https://github.com/rob-clarke/aerso.git" }
serde = "1.0"
serde_yaml = "0.9"
nalgebra = "0.32.3"
kiddo = "2.1.1"
rayon = "1.7.0"
argmin = { version = "0.8.1", features = ["rayon"]}
argmin-math = { version = "0.3", features = ["nalgebra_latest-serde"] }
argmin_testfunctions = "0.1.1"
plotters = "0.3.5"