[package]
name = "flyer"
version = "0.2.0"
edition = "2021"
authors = ["Alexander Quessy <alexander@quesy.io>"]
description = "A flying simulation project"
repository = "https://github.com/aos55/flyer-rs"
license = "MIT OR Apache-2.0"
keywords = ["simulation", "flying", "physics"]
categories = ["simulation"]

[lib]
name = "flyer"

[[bin]]
name = "serve"
path = "src/bin/serve.rs"

[dependencies]
# Graphics and rendering
tiny-skia = "0.11.1"
image = "0.24.7"
bevy = { version = "0.15" }
crossbeam-channel = "0.5.14"
base64 = "0.22.1"

# Math and physics
glam = { version = "0.24.2", features = ["mint", "serde"] }
nalgebra = { version = "0.29", features = ["serde-serialize"] }
noise = "0.8.0"
aerso = { git = "https://github.com/rob-clarke/aerso.git", branch = "main" }

# Optimization and algorithms
argmin = { version = "0.10.0", features = ["rayon"] }
argmin-observer-slog = "0.1.0"
argmin-math = { version = "0.4" }
argmin_testfunctions = "0.1.1"
kiddo = "2.1.1"
futures-lite = "2.5.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9"

# Random number generation
rand = { version = "0.8.5", features = ["serde"] }
rand_seeder = "0.2.3"
rand_chacha = "0.3.1"

# Utility
rayon = "1.7.0"
thiserror = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
petgraph = "0.6"
tempfile = "3.8"
chrono = "0.4"

[dev-dependencies]
pretty_assertions = "1.4"
approx = "0.5.1"

[profile.dev]
opt-level = 1
debug = true
incremental = true

[profile.release]
opt-level = 3
lto = "thin"
strip = true
panic = "abort"

[profile.dev.package."*"]
opt-level = 3

# Enable a small amount of optimization in debug mode
[profile.test]
opt-level = 1

[workspace]
members = ["."]
